--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "json-server --watch db.json"
   },
   "dependencies": {
     "@formkit/vue": "^1.6.5",
-    "@mdi/font": "^7.4.47",
     "axios": "^1.7.2",
+    "json-server": "^1.0.0-beta.1",
     "pinia": "^2.1.7",
     "sass": "^1.77.8",
     "url": "^0.11.3",
@@ -25,6 +26,11 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.27.0",
     "lodash-es": "^4.17.21",
+    "postcss-html": "^1.7.0",
+    "stylelint": "^16.7.0",
+    "stylelint-config-idiomatic-order": "^10.0.0",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-use-logical-spec": "^5.0.1",
     "typescript": "^5.5.4",
     "typescript-eslint": "^7.17.0",
     "unplugin-auto-import": "^0.18.1",
