--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -31,5 +31,5 @@
       ],
     },
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "env.d.ts", "typed-router.d.ts"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "./env.d.ts", "./typed-router.d.ts"]
 }
